tests/derive_compile_fail/unit_struct_rejected.stderr
error: FromRow does not support unit structs
 --> tests/derive_compile_fail/unit_struct_rejected.rs:4:8
  |
4 | struct UnitNotAllowed;
  |        ^^^^^^^^^^^^^^
