tests/derive_compile_fail/unit_struct_rejected.rs
use snowflake_connector_rs::FromRow;

#[derive(FromRow)]
struct UnitNotAllowed;

fn main() {}
